--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/vidhiJain/anavi/releases/tag/v1.0"
+                <a href="https://drive.google.com/drive/folders/1KsWb9yUAMb3w9BZVibmd9h8f8WQC8s0u?usp=drive_link"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
